SDA.css
/* ... */
.introduction h2 {
  font-weight: 500;
  text-align: center;
  margin-bottom: 30px;
  font-family: 'Quicksand', sans-serif;
  font-weight: 200;
  position: relative;

}

/* .introduction h2::after{
  content: '';
    width: 0;
    height: 0;
    border-top:20px solid transparent;
    border-left:20px solid #2176ff;
    border-bottom: 20px solid transparent;


} */

/* .introduction h2::before {
  content: '';
  background-color: #0D2C54;
  height: 44.5px;
  width: 50%;
  position: absolute;
  left: 298px;
  bottom: -2.3px;
  display: transparent;
  border-radius: 0px 8px 8px 0px;
  background-image: linear-gradient(to right, rgba(255,0,0,0), #2176ff);

}
 */






.pttwotwo h2 {
  font-weight: 500;
  text-align: center;
  margin-bottom: 35px;
  margin-top: 40px;
  font-family: 'Quicksand', sans-serif;
  font-weight: 200;
  position: relative;
  
}

.pttwotwo h2::after {
  content: '';
  position: absolute;
  left: 0PX;
  bottom: -8px;
  background-color: #2176FF;
  height: 3px;
  width: 100%;
  box-sizing: border-box;

}

.pttwotwo h2::before {
  content: '';
  position: absolute;
  left: -30PX;
  top: 0px;
  background-color: #2176FF;
  display: block;
  width: 10.5px;
  height: 15px;
  border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
  /* height: 30px;
  width: 30px;
  box-sizing: border-box; */

}

.bodystyle {

   display: flex;
  align-items: center;
 
  max-width: 100%;
  margin-bottom: 30px;
  margin-left: 5px;
  margin-right: 5px;
  flex-direction: column;
  
}

.bodystyle img {
  margin: 0px;
  border:#2176FF 3px solid ;
}
.bodystyle p {
  display:block;
}


.bodystyle p{ 
  max-width: 100%;
  font-family: 'Quicksand', sans-serif;
  line-height: 26px;
  margin-bottom: 60px;
}

.bodystyle ::after {
  content: '';
  clear: both;
}

.pttwotwo {
  display: flex;
  justify-content: center;
}

footer h3 {
  margin-bottom: 20px;
}

.footer-col form { color: white;}


.column {
  /* background-color: #132A13; */
  width: 32%;
  float: left;
  border: #2176FF 5px;
  padding: 3px;
  margin: 2px;
  
}

.now {
  background-color: #2176FF;
  width: 33%;
  float: left;
}

.columntry {
  display: flex;
  justify-content: center;
  align-items: center;
   text-align: center;
  width: 100%;
  height: 20rem
}


.columntry::after {
   content: '';
   display: table;
   clear:both;
   text-align: center;

  
}

.columntry .column:nth-child(2) {
width: 77%;
  
}

.bodystyle aside {
  float: right;
  /* background-color: #2176FF; */
}

.middlesection {
  
   text-align: center;
  width: 100%;
  position:relative;
  margin-bottom: 50px;
  ;
}

/* .middlesection::after {
  content: '';
  clear: both;
  display: table;
  

} */

.middlesection main {
  /* background-color: #132A13; */
  width: 55%;
  align-self: center;
  justify-content: center;
  border: #2176FF 5px;
  padding: 3px;
  margin: 2px;
  margin: 0;
  text-align: center;
  position: relative;
  left: 18%;

  padding: 4px;
}

.middlesection > main > img {

  max-width: 100%;
  border: #2176FF solid 3px;

}

.middlesection aside {
  /* background-color: #0D2C54; */
  width: 25%;
  float: right;
  height: 100%;
  position: absolute;
  top: 0px;
  right: 0;
  padding: 4px;
  margin-right: 10px;
  text-align: left;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.theretis {
  width: 30%;
  
  margin-left: 4px;
  margin-top: 14px;
  /* color: #2176FF; */
}

.bottomtext {
  width: 100%;
  text-align: center;
  display: block;
}

.bottomtext p {

margin-bottom: 10px;

}


.pt-twe {
  position: relative;
  display: flex;
  justify-content: end;
  max-width: 100%;
  
  text-align: right;
  margin-right: 4px;
  margin-bottom: 5px;
  margin-top: 9px;
}

.pt-twe h1 { 
  background-color: #F1F2EB;
  color: #0D2C54;
  max-width:300px;
  text-align: center;
  position: relative;
  right: 0;
  text-align: right;
  margin-bottom: 15px;
text-transform: capitalize;  
font-weight: 500;
  margin-left: 5px;
  border: #0D2C54 2px solid;
  border-width: 2px 0px 2px 0px;
  /* padding: 3px; */
}

.pt-twe h1::before {
  content: '';
  background-color: #0D2C54;
  height: 44.5px;
  width: 50%;
  position: absolute;
  right: 275px;
  bottom: -2.3px;
  display: transparent;
  border-radius: 8px 0px 0px 8px;
  background-image: linear-gradient(to right, rgba(255,0,0,0), #2176ff);

}

.pt-twe h1::after {
  content: '';
    width: 0;
    height: 0;
    border-top:20px solid transparent;
    border-right:20px solid #F1F2EB;
    border-bottom: 20px solid transparent;

    
  
  /* height: 40px;
  width: 20px;
  border-radius: 50%;
  transform: rotateX('150'); */
  position: absolute;
  right: 275px;
  /* bottom: -1px; */
  

 
  


}


aside img {

  max-width: 30%;
  max-height: 30%;
  margin-top: 5px;
  right: 20px;
  bottom: 0px;
  display: block;
}

.grid-container {
  display: grid;
  /* grid-template-rows: auto auto auto; */
  gap: 10px;
  /* background-color: #2196F3; */
  padding: 10px;
  grid-template-columns: 40% 60%;
  grid-template-rows: 33% 33% 33%;
  min-height: 400px;
}

.grid-container > div {
  
  text-align: center;
  padding: 20px 0;
  font-size: 30px;
  border: #0D2C54 4px solid;
  display: inline-grid;
}

.item1, .item3, .item5{
  display:flex;
  align-items: center;
  justify-content: center;
  position: relative;
 
  /* width: 100%;
  grid-column-start: 1;
  grid-column-end: 2; */
}


.item2 p, .item4 p, .item6 p {

font-size: 20px ;
margin-bottom: 30px;

}

.item2 h3, .item4 h3, .item6 h3 {

  font-size: 30px ;
  margin-bottom: 20px;
  
  
  }


.picholder {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  background-color: #2176ff;
  position: absolute;
  /* top: 20%;
  left: 23%; */
  justify-self: center;
  overflow: hidden;
}

.item1 p {
  position: absolute;
  bottom: 9%;
  
  justify-self: center;
}


h1 > img {
  float: right;
  width: 40px;
}

.item3 p {
  position: absolute;
  bottom: 9%;
  justify-self: center;
}

.item5 p {
  position: absolute;
  bottom: 9%;
  justify-self: center;
}
/* ... */

